Made progress on zoom

--- a/css/main.css
+++ b/css/main.css
@@ -32,3 +32,29 @@ body {
   stroke: black;  
   stroke-width: .8px;
 }
+.zoomOut {
+      fill: #66a;
+      cursor: pointer;
+  }
+  .zoomOutText {
+      pointer-events: none;
+      fill : #ccc;
+  }
+  .zoomOverlay {
+      pointer-events: all;
+      fill:none;
+  }
+  .band {
+      fill : none;
+      stroke-width: 1px;
+      stroke: red;
+  }
+.axis path, .axis line {
+      fill: none;
+      stroke: #000;
+      shape-rendering: crispEdges;
+  }
+  path.line {
+      fill: none;
+      stroke-width: 1px;
+  }
