--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
   font: 11px sans-serif;
+  background-color: gainsboro;
 }
 .axis path,
 .axis line {
@@ -11,7 +12,10 @@ body {
   stroke: #000;
 }
 .line {
-  stroke: #bbb;
+  /*stroke: #bbb;
+  facebook blue = #3b5998*/
+  stroke: blue;
+  fill: blue;
 }
 .tooltip {
   position: absolute;
@@ -27,6 +31,7 @@ body {
 }
 .svg { 
   pointer-events: all;
+  background-color: antiquewhite;
 }
 .hover-line { 
   stroke: black;  
